# Magnifier

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
app/: Magnifier.exe.manifest  Magnifier.rc  resource.h
docs/: CLI.md  DESIGN.md  HOTKEYS.md  QA.md
packaging/portable/: config.default.toml
packaging/wix/: License.rtf  Magnifier.wxs
scripts/: build.cmd  make-icon.ps1  release.cmd
src/: main.cpp
src/app/: App.cpp  App.h
src/config/: ConfigStore.cpp  ConfigStore.h
src/input/: Actions.h  ControllerPoll.cpp  ControllerPoll.h  HotkeyManager.cpp  HotkeyManager.h  InputRouter.cpp  InputRouter.h  WgiGamepad.cpp  WgiGamepad.h
src/ipc/: CliParser.cpp  CliParser.h  Commands.h  IpcServer.cpp  IpcServer.h  JsonFraming.cpp  JsonFraming.h
src/mag/: MagController.cpp  MagController.h  StateModel.cpp  StateModel.h
src/ui/: SettingsWindow.cpp  SettingsWindow.h  TrayIcon.cpp  TrayIcon.h
src/update/: Updater.cpp  Updater.h
src/util/: Crash.cpp  Crash.h  Log.cpp  Log.h  Paths.cpp  Paths.h  StringConv.cpp  StringConv.h  Version.h.in  WinError.h
tests/: CMakeLists.txt  test_cli_parser.cpp  test_config_store.cpp  test_hotkey_parse.cpp  test_json_framing.cpp  test_state_model.cpp
